# Adversarial-IaC-Evaluation

./: .env_template  .gitignore  .gitmodules  MANUAL.md  README.md  exper-old.pem  experiment.md  mkdocs.yml  pyproject.toml  requirements.txt  rerun_plan.docx  run_small_experiment.py  ~$run_plan.docx
.github/workflows/: docs.yml
config/: experiment_config.yaml  experiment_small.yaml
docs/: index.md
docs/api/: agents.md  blue-team.md  engine.md  judge.md  prompts.md  red-team.md
docs/cli/: blue-team.md  experiment.md  game.md  judge.md  models.md  play.md  red-team.md  scenarios.md
docs/concepts/: game-flow.md  judge.md  scoring.md
docs/experiments/: analysis.md  batch.md  cloud.md  single-game.md
docs/extending/: models.md  scenarios.md  vulnerabilities.md
docs/framework/: architecture.md  blue-team.md  game-protocol.md  judge.md  metrics.md  overview.md  red-team.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: cli.md  configuration.md  experiments.md
docs/multi-agent/: blue-ensemble.md  debate.md  overview.md  red-pipeline.md
docs/options/: backends.md  difficulties.md  modes.md  strategies.md
docs/research/: citation.md  contributing.md  findings.md  novelty.md  publications.md  tool-comparison.md  validation.md
docs/stylesheets/: extra.css
docs/understanding/: architecture.md  concepts.md
experiments/: PLAN.md  README.md
experiments/config/: E0_validation.yaml  E1S2_qwen35_thinking.yaml  E1S3_qwen35_no_thinking.yaml  E1S3_qwen35_nothinking.yaml  E1S4_qwen3_32b_thinking.yaml  E1S5_qwen3_32b_no_thinking.yaml  E1S6_kimi_k2_thinking.yaml  E1S6b_openai_gpt_oss_120b.yaml  (+13 more)
infrastructure/: README.md
notebooks/: 01_single_game.ipynb  02_run_experiment.ipynb  03_analyze_results.ipynb  04_paper_analysis.ipynb
scripts/: analyze_experiments.py  deploy_to_sagemaker.py  e3_adjusted_analysis.py  run_comparative_experiment.py  run_experiment.py  run_full_experiment.py  update_trivy_rules.py
src/: __init__.py  cli.py  llm_factory.py  models.py  prompts.py
tests/: __init__.py  test_adversarial_asymmetry.py  test_backends.py  test_bug_fixes.py  test_debate_verification.py  test_ensemble.py  test_precision_bottleneck.py  test_red_pipeline.py
(+306 files in other folders)
