[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-iac-eval"
version = "0.1.0"
description = "Adversarial Evaluation of Multi-Agent LLM Systems for Secure Infrastructure-as-Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brian Terry", email = "brian.terry@und.edu"}
]
keywords = [
    "infrastructure-as-code",
    "security",
    "llm",
    "adversarial-evaluation",
    "red-team",
    "blue-team",
    "aws",
    "terraform",
    "cloudformation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core LLM and Graph
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=1.0.0",
    "langchain-core>=0.1.0",
    "langchain-aws>=0.1.0",
    "boto3>=1.34.0",
    
    # CLI and utilities
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "questionary>=2.0.0",
    
    # Analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # The vulnerable IaC generator (installed from local path)
    # Note: Install with: pip install -e ../
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
adversarial-iac = "src.cli:cli"

[project.urls]
Repository = "https://github.com/your-username/adversarial-iac-eval"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
